<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>irobot_create_control</name>
  <version>0.0.1</version>
  <description>Provides the diff-drive controller for the iRobot Create 3 platform.</description>
  <maintainer email="ekumen@irbt.onmicrosoft.com">Ekumen</maintainer>
  <license>Apache-2.0</license>

  <author>iRobot</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros2_control</depend>
  <exec_depend>irobot_create_toolbox</exec_depend>
  <depend>joint_state_controller</depend>
  <depend>ros2launch</depend>
  <depend>ros2_controllers</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
