<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>irobot_create_msgs</name>
  <version>0.1.0</version>
  <description>Package containing action, message and service definitions used by the iRobot Create 3 platform.</description>
  <maintainer email="asoragna@irobot.com">Alberto Soragna</maintainer>
  <license>Apache-2.0</license>

  <author email="asoragna@irobot.com">Alberto Soragna</author>
  <author email="jkearns@irobot.com">Justin Kearns</author>
  <author email="sshamlian@irobot.com">Steven Shamlian</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>action_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
